@@ -1,10 +1,12 @@
 #!/bin/bash
 
-# Comprehensive benchmark script comparing all four configurations:
+# Benchmark script comparing two configurations:
 # 1. Custom JDK + Queue mode (ReferenceQueue-based cleanup)
 # 2. Custom JDK + Poll mode (Scan-based cleanup, no ReferenceQueue)
-# 3. Standard OpenJDK + Queue mode
-# 4. Standard OpenJDK + Poll mode
+#
+# Usage:
+#   ./run_all_benchmarks.sh           - Run benchmarks
+#   ./run_all_benchmarks.sh --results - Show previous results only
 
 set -e
 
@@ -12,11 +14,20 @@ SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 CUSTOM_JDK="${SCRIPT_DIR}/build/linux-x86_64-server-release/jdk"
 CAFFEINE_DIR="${SCRIPT_DIR}/caffeine"
 RESULTS_DIR="${SCRIPT_DIR}/benchmark_results"
-STANDARD_JDK="${SCRIPT_DIR}/openjdk-27+7"
+AGENT_DIR="${SCRIPT_DIR}/WeakRefAgent"
+AGENT_JAR="${AGENT_DIR}/weakref-agent.jar"
+
+# Check if we should just show results
+SHOW_RESULTS_ONLY=false
+if [ "$1" == "--results" ] || [ "$1" == "-r" ]; then
+    SHOW_RESULTS_ONLY=true
+fi
 
 # Benchmark environment settings
 CPU_CORES="${CPU_CORES:-0-11}"          # CPU cores to pin to (override with CPU_CORES env var)
 COOLDOWN_SECONDS="${COOLDOWN_SECONDS:-10}"  # Seconds to wait between benchmarks
+# Comma-separated JVM options passed via -PjvmArgs; override with COMMON_JVM_OPTS env var
+COMMON_JVM_OPTS="${COMMON_JVM_OPTS:--XX:+UseZGC,-Xlog:gc*,-XX:InitialTenuringThreshold=1,-XX:MaxTenuringThreshold=1,-XX:+UnlockDiagnosticVMOptions}"
 
 # Colors for output
 RED='\033[0;31m'
@@ -68,25 +79,86 @@ prepare_environment() {
     echo "  Cooldown period (${COOLDOWN_SECONDS}s)..."
     sleep "$COOLDOWN_SECONDS"
     
-    # Force garbage collection in any remaining Java processes
-    # (JMH will start fresh JVMs anyway, but this helps clean up Gradle)
-    
     print_success "Environment prepared"
 }
+
+# Variable to store original CPU governor and freq
+ORIGINAL_CPU_GOVERNOR=""
+ORIGINAL_MIN_FREQ=""
+ORIGINAL_MAX_FREQ=""
 
 # Function to set CPU governor to performance (requires sudo)
 setup_cpu_performance() {
     if command -v cpupower &> /dev/null && sudo -n true 2>/dev/null; then
-        print_step "Setting CPU governor to performance mode..."
-        sudo cpupower frequency-set -g performance 2>/dev/null || print_warning "Could not set CPU governor"
+        # Save current governor
+        ORIGINAL_CPU_GOVERNOR=$(cat /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor 2>/dev/null || echo "")
+
+        # Save current min/max frequencies (cpu0 as representative)
+        ORIGINAL_MIN_FREQ=$(cat /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 2>/dev/null || echo "")
+        ORIGINAL_MAX_FREQ=$(cat /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2>/dev/null || echo "")
+
+        if [ -n "$ORIGINAL_CPU_GOVERNOR" ]; then
+            print_step "Setting CPU governor to performance mode (current: $ORIGINAL_CPU_GOVERNOR)..."
+            sudo cpupower frequency-set -g performance 2>/dev/null || print_warning "Could not set CPU governor"
+        else
+            print_step "Setting CPU governor to performance mode..."
+            sudo cpupower frequency-set -g performance 2>/dev/null || print_warning "Could not set CPU governor"
+        fi
+
+        # Try to pin frequency to the CPU base clock
+        base_freq=""
+        base_freq=$(cat /sys/devices/system/cpu/cpu0/cpufreq/base_frequency 2>/dev/null || true)
+        if [ -z "$base_freq" ]; then
+            base_freq=$(cat /sys/devices/system/cpu/cpu0/cpufreq/cpuinfo_max_freq 2>/dev/null || true)
+        fi
+        if [ -z "$base_freq" ]; then
+            base_freq=$(cat /sys/devices/system/cpu/cpu0/cpufreq/cpuinfo_min_freq 2>/dev/null || true)
+        fi
+
+        if [ -n "$base_freq" ]; then
+            print_step "Pinning CPU frequencies to base: $base_freq KHz"
+            for cpu_dir in /sys/devices/system/cpu/cpu[0-9]*/cpufreq; do
+                if [ -d "$cpu_dir" ]; then
+                    # Set max first, then min to avoid conflicts
+                    echo "$base_freq" | sudo tee "$cpu_dir/scaling_max_freq" > /dev/null 2>&1
+                    echo "$base_freq" | sudo tee "$cpu_dir/scaling_min_freq" > /dev/null 2>&1
+                fi
+            done
+            # Verify the settings
+            actual_min=$(cat /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 2>/dev/null)
+            actual_max=$(cat /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2>/dev/null)
+            if [ "$actual_min" = "$base_freq" ] && [ "$actual_max" = "$base_freq" ]; then
+                print_success "CPU frequencies pinned to $base_freq KHz"
+            else
+                print_warning "Frequency pinning partial: min=$actual_min, max=$actual_max (target: $base_freq)"
+            fi
+        else
+            print_warning "Could not determine base CPU frequency; skipping frequency pinning"
+        fi
     fi
 }
 
 # Function to restore CPU governor
 restore_cpu_governor() {
     if command -v cpupower &> /dev/null && sudo -n true 2>/dev/null; then
-        print_step "Restoring CPU governor to powersave..."
-        sudo cpupower frequency-set -g powersave 2>/dev/null || true
+        # Restore original min/max freqs if we saved them
+        if [ -n "$ORIGINAL_MIN_FREQ" ] && [ -n "$ORIGINAL_MAX_FREQ" ]; then
+            print_step "Restoring CPU min/max frequencies to ${ORIGINAL_MIN_FREQ}/${ORIGINAL_MAX_FREQ}..."
+            for cpu_dir in /sys/devices/system/cpu/cpu[0-9]*/cpufreq; do
+                if [ -d "$cpu_dir" ]; then
+                    echo "$ORIGINAL_MIN_FREQ" | sudo tee "$cpu_dir/scaling_min_freq" > /dev/null 2>&1 || true
+                    echo "$ORIGINAL_MAX_FREQ" | sudo tee "$cpu_dir/scaling_max_freq" > /dev/null 2>&1 || true
+                fi
+            done
+        fi
+
+        if [ -n "$ORIGINAL_CPU_GOVERNOR" ]; then
+            print_step "Restoring CPU governor to $ORIGINAL_CPU_GOVERNOR..."
+            sudo cpupower frequency-set -g "$ORIGINAL_CPU_GOVERNOR" 2>/dev/null || true
+        else
+            print_step "Restoring CPU governor to powersave..."
+            sudo cpupower frequency-set -g powersave 2>/dev/null || true
+        fi
     fi
 }
 
@@ -106,16 +178,18 @@ if [ ! -d "$CAFFEINE_DIR" ]; then
     exit 1
 fi
 
-# Download standard OpenJDK if not present
-if [ ! -d "$STANDARD_JDK" ]; then
-    print_header "Downloading Standard OpenJDK 27+7"
-    cd "$SCRIPT_DIR"
-    wget -q --show-progress "https://download.java.net/java/early_access/jdk27/7/GPL/openjdk-27-ea+7_linux-x64_bin.tar.gz"
-    echo "Extracting..."
-    tar -xzf openjdk-27-ea+7_linux-x64_bin.tar.gz
-    rm openjdk-27-ea+7_linux-x64_bin.tar.gz
-    mv jdk-27 openjdk-27+7
-    print_success "OpenJDK 27+7 downloaded and extracted"
+# Build WeakRefPressureAgent if needed
+build_agent() {
+    if [ ! -f "$AGENT_JAR" ]; then
+        print_step "Building WeakRefPressureAgent..."
+        chmod +x "$AGENT_DIR/build.sh"
+        (cd "$AGENT_DIR" && ./build.sh)
+        print_success "Agent built successfully"
+    fi
+}
+
+if [ "$SHOW_RESULTS_ONLY" = false ]; then
+    build_agent
 fi
 
 cd "$CAFFEINE_DIR"
@@ -125,17 +199,40 @@ run_benchmark() {
     local jdk_path="$1"
     local jdk_name="$2"
     local mode="$3"
-    local output_file="$4"
-    
-    # Prepare environment before each run
-    prepare_environment
+    local benchmark_pattern="$4"
+    local output_file="$5"
+    local growable_array_option="$6"  # "enabled" or "disabled"
+    local use_agent="${7:-false}"      # optional: use weak ref pressure agent
     
     export JAVA_HOME="$jdk_path"
     export PATH="$JAVA_HOME/bin:$PATH"
     
-    print_step "Running: $jdk_name + $mode mode"
+    local growable_array_flag=""
+    local growable_array_display=""
+    if [ "$growable_array_option" == "enabled" ]; then
+        growable_array_flag="-XX:+ZUseGrowableArrayDiscoveredList"
+        growable_array_display="GrowableArray=ON"
+    elif [ "$growable_array_option" == "disabled" ]; then
+        growable_array_flag="-XX:-ZUseGrowableArrayDiscoveredList"
+        growable_array_display="GrowableArray=OFF"
+    fi
+    
+    local agent_args=""
+    local agent_display=""
+    if [ "$use_agent" == "true" ]; then
+        agent_args=",-javaagent:${AGENT_JAR}=threads=2;refs=1000;delay=10"
+        agent_display=" + WeakRefAgent"
+    fi
+    
+    print_step "Running: $jdk_name + $mode mode + $growable_array_display$agent_display + $benchmark_pattern"
     echo "  JDK: $jdk_path"
     echo "  Mode: -Dcaffeine.referenceCleanup=$mode"
+    echo "  GrowableArray: $growable_array_flag"
+    echo "  JVM opts: $COMMON_JVM_OPTS"
+    if [ "$use_agent" == "true" ]; then
+        echo "  Agent: WeakRefPressureAgent (2 threads, 1000 refs/batch)"
+    fi
+    echo "  Benchmark: $benchmark_pattern"
     echo "  CPU cores: $CPU_CORES"
     echo ""
     
@@ -143,62 +240,135 @@ run_benchmark() {
     taskset -c "$CPU_CORES" nice -n -5 \
         ./gradlew jmh -PjavaVersion=27 \
             "-Porg.gradle.java.installations.paths=$jdk_path" \
-            -PincludePattern=GetPutBenchmark \
-            "-PbenchmarkParameters=cacheType=Caffeine" \
-            "-PjvmArgs=-XX:+UseZGC,-Dcaffeine.referenceCleanup=$mode" \
+            -PincludePattern="$benchmark_pattern" \
+            "-PjvmArgs=${COMMON_JVM_OPTS},$growable_array_flag,-Dcaffeine.referenceCleanup=$mode$agent_args" \
             --rerun -q 2>&1 | tee "$output_file"
     
-    print_success "Completed: $jdk_name + $mode mode"
+    print_success "Completed: $jdk_name + $mode mode + $growable_array_display$agent_display + $benchmark_pattern"
     echo ""
 }
 
 # Function to extract Caffeine-specific results
 extract_caffeine_results() {
     local file="$1"
-    grep "Caffeine" "$file" | grep -E "^GetPutBenchmark\.(read_only|write_only|readwrite) " || true
+    grep -E "^(GetPutWeakRefBenchmark|PutRemoveWeakRefBenchmark|ComputeWeakRefBenchmark|EvictionWeakRefBenchmark)\." "$file" || true
 }
 
 # Function to extract all main benchmark results (not sub-benchmarks)
 extract_main_results() {
     local file="$1"
-    grep -E "^GetPutBenchmark\.(read_only|write_only|readwrite) " "$file" || true
+    grep -E "^(GetPutWeakRefBenchmark|PutRemoveWeakRefBenchmark|ComputeWeakRefBenchmark|EvictionWeakRefBenchmark)\." "$file" || true
 }
 
 print_header "CAFFEINE BENCHMARK SUITE"
-echo "Testing all four configurations:"
-echo "  1. Custom JDK + Queue mode (ReferenceQueue-based)"
-echo "  2. Custom JDK + Poll mode (Scan-based, no ReferenceQueue)"
-echo "  3. Standard OpenJDK 27+7 + Queue mode"
-echo "  4. Standard OpenJDK 27+7 + Poll mode"
-echo ""
-echo "Custom JDK:   $CUSTOM_JDK"
-echo "Standard JDK: $STANDARD_JDK"
-echo ""
-echo -e "${BOLD}Environment Settings:${NC}"
-echo "  CPU cores:    $CPU_CORES"
-echo "  Cooldown:     ${COOLDOWN_SECONDS}s between runs"
-echo "  CPU pinning:  taskset -c $CPU_CORES"
-echo "  Priority:     nice -n -5"
-echo ""
 
-# Try to set CPU governor to performance mode
-setup_cpu_performance
+# Prime Gradle/JMH/JIT so the first measured configuration is not advantaged
+prime_benchmarks() {
+    print_header "Priming build/JMH (discarded)"
 
-# Trap to restore CPU governor on exit
-trap restore_cpu_governor EXIT
+    # Use the custom JDK and a single, short benchmark to warm Gradle, class loading,
+    # JIT, and JVM startup costs. Results are intentionally ignored.
+    export JAVA_HOME="$CUSTOM_JDK"
+    export PATH="$JAVA_HOME/bin:$PATH"
 
-# Run all four benchmarks
-print_header "1/4: Custom JDK + Queue Mode"
-run_benchmark "$CUSTOM_JDK" "Custom JDK" "queue" "${RESULTS_DIR}/custom_queue.txt"
+    taskset -c "$CPU_CORES" nice -n -5 \
+        ./gradlew jmh -PjavaVersion=27 \
+            "-Porg.gradle.java.installations.paths=$CUSTOM_JDK" \
+            -PincludePattern="GetPutWeakRefBenchmark" \
+            "-PjvmArgs=${COMMON_JVM_OPTS},-XX:+ZUseGrowableArrayDiscoveredList,-Dcaffeine.referenceCleanup=queue" \
+            -PwarmupIterations=1 -PmeasurementIterations=1 -Pfork=1 \
+            --rerun -q > /dev/null 2>&1 || true
 
-print_header "2/4: Custom JDK + Poll Mode"
-run_benchmark "$CUSTOM_JDK" "Custom JDK" "poll" "${RESULTS_DIR}/custom_poll.txt"
+    print_success "Priming run completed; results discarded"
+}
 
-print_header "3/4: Standard OpenJDK + Queue Mode"
-run_benchmark "$STANDARD_JDK" "Standard OpenJDK" "queue" "${RESULTS_DIR}/standard_queue.txt"
+if [ "$SHOW_RESULTS_ONLY" = true ]; then
+    echo "Displaying previous benchmark results..."
+    echo ""
+    
+    if [ ! -f "${RESULTS_DIR}/custom_queue_growable_on.txt" ] || [ ! -f "${RESULTS_DIR}/custom_poll_growable_on.txt" ]; then
+        echo -e "${RED}Error: Benchmark results not found${NC}"
+        echo "Please run benchmarks first without --results flag"
+        exit 1
+    fi
+else
+    echo "Testing 8 configurations:"
+    echo "  Queue/Poll × GrowableArray ON/OFF × Agent ON/OFF"
+    echo ""
+    echo "  1. Queue + GrowableArray ON"
+    echo "  2. Queue + GrowableArray ON + WeakRef Agent"
+    echo "  3. Queue + GrowableArray OFF"
+    echo "  4. Queue + GrowableArray OFF + WeakRef Agent"
+    echo "  5. Poll + GrowableArray ON"
+    echo "  6. Poll + GrowableArray ON + WeakRef Agent"
+    echo "  7. Poll + GrowableArray OFF"
+    echo "  8. Poll + GrowableArray OFF + WeakRef Agent"
+    echo ""
+    echo "Benchmarks to run:"
+    echo "  • GetPutWeakRefBenchmark - Basic get/put operations with weak references"
+    echo "  • PutRemoveWeakRefBenchmark - High churn put/remove operations with weak references"
+    echo "  • ComputeWeakRefBenchmark - computeIfAbsent operations with weak references"
+    echo "  • EvictionWeakRefBenchmark - 100% eviction rate with weak references"
+    echo ""
+    echo "Custom JDK:   $CUSTOM_JDK"
+    echo "Agent:        $AGENT_JAR"
+    echo ""
+    echo -e "${BOLD}Environment Settings:${NC}"
+    echo "  CPU cores:    $CPU_CORES"
+    echo "  Cooldown:     ${COOLDOWN_SECONDS}s between runs"
+    echo "  CPU pinning:  taskset -c $CPU_CORES"
+    echo "  Priority:     nice -n -5"
+    echo "  JVM opts:     $COMMON_JVM_OPTS"
+    echo ""
 
-print_header "4/4: Standard OpenJDK + Poll Mode"
-run_benchmark "$STANDARD_JDK" "Standard OpenJDK" "poll" "${RESULTS_DIR}/standard_poll.txt"
+    # Try to set CPU governor to performance mode
+    setup_cpu_performance
+    
+    # Trap to restore CPU governor on exit
+    trap restore_cpu_governor EXIT
+
+    # prepare environment before starting benchmarks
+    prepare_environment
+
+    # Warm everything up so later runs are not penalized
+    prime_benchmarks
+    
+    
+    # List of benchmarks to run
+    BENCHMARKS=(
+        "GetPutWeakRefBenchmark"
+        "PutRemoveWeakRefBenchmark"
+        "ComputeWeakRefBenchmark"
+        "EvictionWeakRefBenchmark"
+    )
+    
+    # Run all benchmarks for all 8 configurations
+    BENCHMARK_PATTERN=$(IFS='|'; echo "${BENCHMARKS[*]}")
+    
+    print_header "1/8: Custom JDK + Queue Mode + GrowableArray ON"
+    run_benchmark "$CUSTOM_JDK" "Custom JDK" "queue" "$BENCHMARK_PATTERN" "${RESULTS_DIR}/custom_queue_growable_on.txt" "enabled"
+    
+    print_header "2/8: Custom JDK + Queue Mode + GrowableArray ON + WeakRef Agent"
+    run_benchmark "$CUSTOM_JDK" "Custom JDK" "queue" "$BENCHMARK_PATTERN" "${RESULTS_DIR}/custom_queue_growable_on_agent.txt" "enabled" "true"
+    
+    print_header "3/8: Custom JDK + Queue Mode + GrowableArray OFF"
+    run_benchmark "$CUSTOM_JDK" "Custom JDK" "queue" "$BENCHMARK_PATTERN" "${RESULTS_DIR}/custom_queue_growable_off.txt" "disabled"
+    
+    print_header "4/8: Custom JDK + Queue Mode + GrowableArray OFF + WeakRef Agent"
+    run_benchmark "$CUSTOM_JDK" "Custom JDK" "queue" "$BENCHMARK_PATTERN" "${RESULTS_DIR}/custom_queue_growable_off_agent.txt" "disabled" "true"
+    
+    print_header "5/8: Custom JDK + Poll Mode + GrowableArray ON"
+    run_benchmark "$CUSTOM_JDK" "Custom JDK" "poll" "$BENCHMARK_PATTERN" "${RESULTS_DIR}/custom_poll_growable_on.txt" "enabled"
+    
+    print_header "6/8: Custom JDK + Poll Mode + GrowableArray ON + WeakRef Agent"
+    run_benchmark "$CUSTOM_JDK" "Custom JDK" "poll" "$BENCHMARK_PATTERN" "${RESULTS_DIR}/custom_poll_growable_on_agent.txt" "enabled" "true"
+    
+    print_header "7/8: Custom JDK + Poll Mode + GrowableArray OFF"
+    run_benchmark "$CUSTOM_JDK" "Custom JDK" "poll" "$BENCHMARK_PATTERN" "${RESULTS_DIR}/custom_poll_growable_off.txt" "disabled"
+    
+    print_header "8/8: Custom JDK + Poll Mode + GrowableArray OFF + WeakRef Agent"
+    run_benchmark "$CUSTOM_JDK" "Custom JDK" "poll" "$BENCHMARK_PATTERN" "${RESULTS_DIR}/custom_poll_growable_off_agent.txt" "disabled" "true"
+fi
 
 # Generate summary report
 print_header "BENCHMARK RESULTS SUMMARY"
@@ -206,116 +376,125 @@ print_header "BENCHMARK RESULTS SUMMARY"
 echo -e "${BOLD}Caffeine Cache Performance (ops/s - higher is better)${NC}"
 echo ""
 
-# Create a formatted comparison table
-echo "┌────────────────────────────────────────────────────────────────────────────────────┐"
-echo "│                           CAFFEINE BENCHMARK RESULTS                               │"
-echo "├────────────────────────────────────────────────────────────────────────────────────┤"
-printf "│ %-20s │ %-14s │ %-14s │ %-14s │ %-10s │\n" "Configuration" "read_only" "write_only" "readwrite" "Change"
-echo "├────────────────────────────────────────────────────────────────────────────────────┤"
-
-# Extract Caffeine results for each configuration
-for config in "custom_queue:Custom+Queue" "custom_poll:Custom+Poll" "standard_queue:Standard+Queue" "standard_poll:Standard+Poll"; do
-    file="${config%%:*}"
-    name="${config##*:}"
-    
-    if [ -f "${RESULTS_DIR}/${file}.txt" ]; then
-        read_only=$(grep "^GetPutBenchmark.read_only " "${RESULTS_DIR}/${file}.txt" | grep "Caffeine" | awk '{printf "%.1fM", $5/1000000}')
-        write_only=$(grep "^GetPutBenchmark.write_only " "${RESULTS_DIR}/${file}.txt" | grep "Caffeine" | awk '{printf "%.1fM", $5/1000000}')
-        readwrite=$(grep "^GetPutBenchmark.readwrite " "${RESULTS_DIR}/${file}.txt" | grep "Caffeine" | awk '{printf "%.1fM", $5/1000000}')
-        
-        [ -z "$read_only" ] && read_only="N/A"
-        [ -z "$write_only" ] && write_only="N/A"
-        [ -z "$readwrite" ] && readwrite="N/A"
-        
-        printf "│ %-20s │ %14s │ %14s │ %14s │ %10s │\n" "$name" "$read_only" "$write_only" "$readwrite" "-"
-    else
-        printf "│ %-20s │ %14s │ %14s │ %14s │ %10s │\n" "$name" "N/A" "N/A" "N/A" "-"
-    fi
-done
-
-echo "└────────────────────────────────────────────────────────────────────────────────────┘"
+ # Compare all eight configurations for Custom JDK
+echo -e "${BOLD}Full Configuration Comparison (Custom JDK)${NC}"
+echo "Queue/Poll Mode × GrowableArray ON/OFF × Agent ON/OFF"
+echo "────────────────────────────────────────────────────"
 echo ""
 
-# Compare Queue vs Poll for Custom JDK
-echo -e "${BOLD}Queue vs Poll Comparison (Custom JDK)${NC}"
-echo "────────────────────────────────────────"
+if [ -f "${RESULTS_DIR}/custom_queue_growable_on.txt" ] && [ -f "${RESULTS_DIR}/custom_poll_growable_on.txt" ]; then
+    # Get all unique benchmark names
+    benchmarks=$(grep -E "^(GetPutWeakRefBenchmark|PutRemoveWeakRefBenchmark|ComputeWeakRefBenchmark|EvictionWeakRefBenchmark)\." "${RESULTS_DIR}/custom_queue_growable_on.txt" | awk '{print $1}' | sort -u)
+    
+    while IFS= read -r bench; do
+        # Get all matches for this benchmark from all eight configurations
+        mapfile -t queue_on_lines < <(grep "^$bench " "${RESULTS_DIR}/custom_queue_growable_on.txt" 2>/dev/null || true)
+        mapfile -t queue_on_agent_lines < <(grep "^$bench " "${RESULTS_DIR}/custom_queue_growable_on_agent.txt" 2>/dev/null || true)
+        mapfile -t queue_off_lines < <(grep "^$bench " "${RESULTS_DIR}/custom_queue_growable_off.txt" 2>/dev/null || true)
+        mapfile -t queue_off_agent_lines < <(grep "^$bench " "${RESULTS_DIR}/custom_queue_growable_off_agent.txt" 2>/dev/null || true)
+        mapfile -t poll_on_lines < <(grep "^$bench " "${RESULTS_DIR}/custom_poll_growable_on.txt" 2>/dev/null || true)
+        mapfile -t poll_on_agent_lines < <(grep "^$bench " "${RESULTS_DIR}/custom_poll_growable_on_agent.txt" 2>/dev/null || true)
+        mapfile -t poll_off_lines < <(grep "^$bench " "${RESULTS_DIR}/custom_poll_growable_off.txt" 2>/dev/null || true)
+        mapfile -t poll_off_agent_lines < <(grep "^$bench " "${RESULTS_DIR}/custom_poll_growable_off_agent.txt" 2>/dev/null || true)
+        
+        if [ ${#queue_on_lines[@]} -eq 0 ] && [ ${#queue_on_agent_lines[@]} -eq 0 ] && \
+           [ ${#queue_off_lines[@]} -eq 0 ] && [ ${#queue_off_agent_lines[@]} -eq 0 ] && \
+           [ ${#poll_on_lines[@]} -eq 0 ] && [ ${#poll_on_agent_lines[@]} -eq 0 ] && \
+           [ ${#poll_off_lines[@]} -eq 0 ] && [ ${#poll_off_agent_lines[@]} -eq 0 ]; then
+            continue
+        fi
 
-if [ -f "${RESULTS_DIR}/custom_queue.txt" ] && [ -f "${RESULTS_DIR}/custom_poll.txt" ]; then
-    queue_read=$(grep "^GetPutBenchmark.read_only " "${RESULTS_DIR}/custom_queue.txt" | grep "Caffeine" | awk '{print $5}')
-    poll_read=$(grep "^GetPutBenchmark.read_only " "${RESULTS_DIR}/custom_poll.txt" | grep "Caffeine" | awk '{print $5}')
-    
-    queue_write=$(grep "^GetPutBenchmark.write_only " "${RESULTS_DIR}/custom_queue.txt" | grep "Caffeine" | awk '{print $5}')
-    poll_write=$(grep "^GetPutBenchmark.write_only " "${RESULTS_DIR}/custom_poll.txt" | grep "Caffeine" | awk '{print $5}')
-    
-    queue_rw=$(grep "^GetPutBenchmark.readwrite " "${RESULTS_DIR}/custom_queue.txt" | grep "Caffeine" | awk '{print $5}')
-    poll_rw=$(grep "^GetPutBenchmark.readwrite " "${RESULTS_DIR}/custom_poll.txt" | grep "Caffeine" | awk '{print $5}')
-    
-    if [ -n "$queue_read" ] && [ -n "$poll_read" ]; then
-        diff_read=$(echo "scale=2; (($poll_read - $queue_read) / $queue_read) * 100" | bc 2>/dev/null || echo "N/A")
-        echo "  read_only:  Queue=$(echo "scale=1; $queue_read/1000000" | bc)M  Poll=$(echo "scale=1; $poll_read/1000000" | bc)M  Diff: ${diff_read}%"
-    fi
-    
-    if [ -n "$queue_write" ] && [ -n "$poll_write" ]; then
-        diff_write=$(echo "scale=2; (($poll_write - $queue_write) / $queue_write) * 100" | bc 2>/dev/null || echo "N/A")
-        echo "  write_only: Queue=$(echo "scale=1; $queue_write/1000000" | bc)M  Poll=$(echo "scale=1; $poll_write/1000000" | bc)M  Diff: ${diff_write}%"
-    fi
-    
-    if [ -n "$queue_rw" ] && [ -n "$poll_rw" ]; then
-        diff_rw=$(echo "scale=2; (($poll_rw - $queue_rw) / $queue_rw) * 100" | bc 2>/dev/null || echo "N/A")
-        echo "  readwrite:  Queue=$(echo "scale=1; $queue_rw/1000000" | bc)M  Poll=$(echo "scale=1; $poll_rw/1000000" | bc)M  Diff: ${diff_rw}%"
-    fi
+        echo "  ${bench}:"
+        maxn=${#queue_on_lines[@]}
+        if [ ${#queue_on_agent_lines[@]} -gt $maxn ]; then maxn=${#queue_on_agent_lines[@]}; fi
+        if [ ${#queue_off_lines[@]} -gt $maxn ]; then maxn=${#queue_off_lines[@]}; fi
+        if [ ${#queue_off_agent_lines[@]} -gt $maxn ]; then maxn=${#queue_off_agent_lines[@]}; fi
+        if [ ${#poll_on_lines[@]} -gt $maxn ]; then maxn=${#poll_on_lines[@]}; fi
+        if [ ${#poll_on_agent_lines[@]} -gt $maxn ]; then maxn=${#poll_on_agent_lines[@]}; fi
+        if [ ${#poll_off_lines[@]} -gt $maxn ]; then maxn=${#poll_off_lines[@]}; fi
+        if [ ${#poll_off_agent_lines[@]} -gt $maxn ]; then maxn=${#poll_off_agent_lines[@]}; fi
+
+        for i in $(seq 0 $((maxn-1))); do
+            # Extract scores from each configuration
+            qon_score="-"
+            qona_score="-"
+            qoff_score="-"
+            qoffa_score="-"
+            pon_score="-"
+            pona_score="-"
+            poff_score="-"
+            poffa_score="-"
+            
+            if [ $i -lt ${#queue_on_lines[@]} ]; then
+                qon_score=$(echo "${queue_on_lines[$i]}" | awk '{print $4}')
+            fi
+            if [ $i -lt ${#queue_on_agent_lines[@]} ]; then
+                qona_score=$(echo "${queue_on_agent_lines[$i]}" | awk '{print $4}')
+            fi
+            if [ $i -lt ${#queue_off_lines[@]} ]; then
+                qoff_score=$(echo "${queue_off_lines[$i]}" | awk '{print $4}')
+            fi
+            if [ $i -lt ${#queue_off_agent_lines[@]} ]; then
+                qoffa_score=$(echo "${queue_off_agent_lines[$i]}" | awk '{print $4}')
+            fi
+            if [ $i -lt ${#poll_on_lines[@]} ]; then
+                pon_score=$(echo "${poll_on_lines[$i]}" | awk '{print $4}')
+            fi
+            if [ $i -lt ${#poll_on_agent_lines[@]} ]; then
+                pona_score=$(echo "${poll_on_agent_lines[$i]}" | awk '{print $4}')
+            fi
+            if [ $i -lt ${#poll_off_lines[@]} ]; then
+                poff_score=$(echo "${poll_off_lines[$i]}" | awk '{print $4}')
+            fi
+            if [ $i -lt ${#poll_off_agent_lines[@]} ]; then
+                poffa_score=$(echo "${poll_off_agent_lines[$i]}" | awk '{print $4}')
+            fi
+
+            # format numbers in millions
+            qon_M=$([ "$qon_score" != "-" ] && echo "scale=2; $qon_score/1000000" | bc || echo "-")
+            qona_M=$([ "$qona_score" != "-" ] && echo "scale=2; $qona_score/1000000" | bc || echo "-")
+            qoff_M=$([ "$qoff_score" != "-" ] && echo "scale=2; $qoff_score/1000000" | bc || echo "-")
+            qoffa_M=$([ "$qoffa_score" != "-" ] && echo "scale=2; $qoffa_score/1000000" | bc || echo "-")
+            pon_M=$([ "$pon_score" != "-" ] && echo "scale=2; $pon_score/1000000" | bc || echo "-")
+            pona_M=$([ "$pona_score" != "-" ] && echo "scale=2; $pona_score/1000000" | bc || echo "-")
+            poff_M=$([ "$poff_score" != "-" ] && echo "scale=2; $poff_score/1000000" | bc || echo "-")
+            poffa_M=$([ "$poffa_score" != "-" ] && echo "scale=2; $poffa_score/1000000" | bc || echo "-")
+
+            printf "    Config %d:\n" "$((i+1))"
+            printf "      Queue+GA_ON:       %8sM   Queue+GA_ON+Agent:    %8sM\n" "$qon_M" "$qona_M"
+            printf "      Queue+GA_OFF:      %8sM   Queue+GA_OFF+Agent:   %8sM\n" "$qoff_M" "$qoffa_M"
+            printf "      Poll+GA_ON:        %8sM   Poll+GA_ON+Agent:     %8sM\n" "$pon_M" "$pona_M"
+            printf "      Poll+GA_OFF:       %8sM   Poll+GA_OFF+Agent:    %8sM\n" "$poff_M" "$poffa_M"
+        done
+        echo ""
+    done <<< "$benchmarks"
 fi
 
 echo ""
 
-# Compare Custom JDK vs Standard JDK (both using queue mode)
-echo -e "${BOLD}Custom JDK vs Standard OpenJDK (Queue Mode)${NC}"
-echo "────────────────────────────────────────────"
+# Full results for all benchmarks
+print_header "FULL RESULTS BY CONFIGURATION"
 
-if [ -f "${RESULTS_DIR}/custom_queue.txt" ] && [ -f "${RESULTS_DIR}/standard_queue.txt" ]; then
-    custom_read=$(grep "^GetPutBenchmark.read_only " "${RESULTS_DIR}/custom_queue.txt" | grep "Caffeine" | awk '{print $5}')
-    std_read=$(grep "^GetPutBenchmark.read_only " "${RESULTS_DIR}/standard_queue.txt" | grep "Caffeine" | awk '{print $5}')
-    
-    custom_write=$(grep "^GetPutBenchmark.write_only " "${RESULTS_DIR}/custom_queue.txt" | grep "Caffeine" | awk '{print $5}')
-    std_write=$(grep "^GetPutBenchmark.write_only " "${RESULTS_DIR}/standard_queue.txt" | grep "Caffeine" | awk '{print $5}')
-    
-    custom_rw=$(grep "^GetPutBenchmark.readwrite " "${RESULTS_DIR}/custom_queue.txt" | grep "Caffeine" | awk '{print $5}')
-    std_rw=$(grep "^GetPutBenchmark.readwrite " "${RESULTS_DIR}/standard_queue.txt" | grep "Caffeine" | awk '{print $5}')
-    
-    if [ -n "$custom_read" ] && [ -n "$std_read" ]; then
-        diff_read=$(echo "scale=2; (($custom_read - $std_read) / $std_read) * 100" | bc 2>/dev/null || echo "N/A")
-        echo "  read_only:  Custom=$(echo "scale=1; $custom_read/1000000" | bc)M  Standard=$(echo "scale=1; $std_read/1000000" | bc)M  Diff: ${diff_read}%"
-    fi
-    
-    if [ -n "$custom_write" ] && [ -n "$std_write" ]; then
-        diff_write=$(echo "scale=2; (($custom_write - $std_write) / $std_write) * 100" | bc 2>/dev/null || echo "N/A")
-        echo "  write_only: Custom=$(echo "scale=1; $custom_write/1000000" | bc)M  Standard=$(echo "scale=1; $std_write/1000000" | bc)M  Diff: ${diff_write}%"
-    fi
-    
-    if [ -n "$custom_rw" ] && [ -n "$std_rw" ]; then
-        diff_rw=$(echo "scale=2; (($custom_rw - $std_rw) / $std_rw) * 100" | bc 2>/dev/null || echo "N/A")
-        echo "  readwrite:  Custom=$(echo "scale=1; $custom_rw/1000000" | bc)M  Standard=$(echo "scale=1; $std_rw/1000000" | bc)M  Diff: ${diff_rw}%"
-    fi
-fi
-
-echo ""
-
-# Full results for all cache types
-print_header "FULL RESULTS BY CACHE TYPE"
-
-for config in "custom_queue:Custom JDK + Queue" "custom_poll:Custom JDK + Poll" "standard_queue:Standard JDK + Queue" "standard_poll:Standard JDK + Poll"; do
+for config in "custom_queue_growable_on:Custom JDK + Queue + GA_ON" \
+              "custom_queue_growable_on_agent:Custom JDK + Queue + GA_ON + Agent" \
+              "custom_queue_growable_off:Custom JDK + Queue + GA_OFF" \
+              "custom_queue_growable_off_agent:Custom JDK + Queue + GA_OFF + Agent" \
+              "custom_poll_growable_on:Custom JDK + Poll + GA_ON" \
+              "custom_poll_growable_on_agent:Custom JDK + Poll + GA_ON + Agent" \
+              "custom_poll_growable_off:Custom JDK + Poll + GA_OFF" \
+              "custom_poll_growable_off_agent:Custom JDK + Poll + GA_OFF + Agent"; do
     file="${config%%:*}"
     name="${config##*:}"
     
     if [ -f "${RESULTS_DIR}/${file}.txt" ]; then
         echo -e "${CYAN}${name}${NC}"
-        echo "────────────────────────────────────────"
+        echo "────────────────────────────────────────────────────────────────────────"
         extract_main_results "${RESULTS_DIR}/${file}.txt" | while read line; do
             bench=$(echo "$line" | awk '{print $1}')
-            cache=$(echo "$line" | awk '{print $2}')
-            score=$(echo "$line" | awk '{printf "%.2fM", $5/1000000}')
-            error=$(echo "$line" | awk '{printf "±%.2fM", $7/1000000}')
-            printf "  %-15s %-25s %12s %12s ops/s\n" "$bench" "$cache" "$score" "$error"
+            mode=$(echo "$line" | awk '{print $2}')
+            score=$(echo "$line" | awk '{printf "%.2fM", $4/1000000}')
+            error=$(echo "$line" | awk '{printf "±%.2fM", $6/1000000}')
+            printf "  %-50s %-15s %12s %12s ops/s\n" "$bench" "$mode" "$score" "$error"
         done
         echo ""
     fi
@@ -323,9 +502,21 @@ done
 
 print_header "BENCHMARK COMPLETE"
 echo "Raw results saved to:"
-echo "  ${RESULTS_DIR}/custom_queue.txt"
-echo "  ${RESULTS_DIR}/custom_poll.txt"
-echo "  ${RESULTS_DIR}/standard_queue.txt"
-echo "  ${RESULTS_DIR}/standard_poll.txt"
+echo "  ${RESULTS_DIR}/custom_queue_growable_on.txt"
+echo "  ${RESULTS_DIR}/custom_queue_growable_on_agent.txt"
+echo "  ${RESULTS_DIR}/custom_queue_growable_off.txt"
+echo "  ${RESULTS_DIR}/custom_queue_growable_off_agent.txt"
+echo "  ${RESULTS_DIR}/custom_poll_growable_on.txt"
+echo "  ${RESULTS_DIR}/custom_poll_growable_on_agent.txt"
+echo "  ${RESULTS_DIR}/custom_poll_growable_off.txt"
+echo "  ${RESULTS_DIR}/custom_poll_growable_off_agent.txt"
 echo ""
-echo "Note: Positive % difference means the first option is faster"
+echo "Tested configurations (8 total):"
+echo "  • Queue + GrowableArray ON"
+echo "  • Queue + GrowableArray ON + WeakRef Agent"
+echo "  • Queue + GrowableArray OFF"
+echo "  • Queue + GrowableArray OFF + WeakRef Agent"
+echo "  • Poll + GrowableArray ON"
+echo "  • Poll + GrowableArray ON + WeakRef Agent"
+echo "  • Poll + GrowableArray OFF"
+echo "  • Poll + GrowableArray OFF + WeakRef Agent"
